Adjusted overflow height to fix visual issue

--- a/src/components/styles/MyLocations.css
+++ b/src/components/styles/MyLocations.css
@@ -122,7 +122,7 @@
 .overflow {
     position: absolute;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    height: 100%;
+    height: 100vh;
     width: 100%;
     z-index: 1;
     top: 0;
